# pandora_audio

pandora_audio/: package.xml
pandora_audio_msgs/: CMakeLists.txt  package.xml
pandora_audio_msgs/msg/: AudioData.msg  Recognition.msg  SoundAlert.msg  SoundAlertVector.msg
pandora_kinect_audio_capture/: CMakeLists.txt  package.xml
pandora_kinect_audio_capture/config/: common_params.yaml
pandora_kinect_audio_capture/launch/: capture.launch  monitor.launch  record.launch
pandora_kinect_audio_capture/scripts/pandora_kinect_audio_capture/: capture.py  monitor.py  record.py
pandora_kinect_audio_processing/: CMakeLists.txt  package.xml
pandora_kinect_audio_processing/config/: processing_params.yaml  processing_topics.yaml
pandora_kinect_audio_processing/launch/: process.launch
pandora_kinect_audio_processing/scripts/pandora_kinect_audio_processing/: processing.py
pandora_voice_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
pandora_voice_recognition/config/: keyphrase.list  keyphrase.list.hard  keyphrase.list.soft  robocup_words.yaml
pandora_voice_recognition/demo/: robocup.dic  robocup.launch  robocup.lm
pandora_voice_recognition/include/pandora_voice_recognition/: alert_generator.h
pandora_voice_recognition/launch/: alert_generator.launch  localization.launch  pandora_sound_all.launch  pandora_voice_recognizer.launch  recognizer.launch
pandora_voice_recognition/nodes/: recognizer.py
pandora_voice_recognition/src/: alert_generator.cpp  robocup.txt
