<package format="2">
<name>pandora_kinect_audio_capture</name>
  <version>0.0.0</version>
  <description>Capture code for microsoft Kinect</description>

  <maintainer email="nicktgr15@gmail.com">Nikolaos Tsipas</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_audio/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_audio</url>

  <author>Nikolaos Tsipas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pandora_audio_msgs</depend>

  <exec_depend>python-numpy</exec_depend>

<!--
  External depend, until gets support by rosdep
  <run_depend>python-alsaaudio</run_depend>
-->

  <export>
  </export>

</package>





