<package format="2">
<name>pandora_kinect_audio_processing</name>
  <version>0.0.0</version>
  <description>Processing code for microsoft Kinect</description>

  <maintainer email="driverbulba@gmail.com">Taras Nikos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_audio/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_audio</url>

  <author>Taras Nikos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pandora_audio_msgs</depend>
  <depend>pandora_common_msgs</depend>
  <depend>state_manager</depend>
  <depend>state_manager_msgs</depend>

  <exec_depend>python-numpy</exec_depend>
  
  <export>
  </export>

</package>
