<package format="2">
  <name>pandora_voice_recognition</name>
  <version>0.4.0</version>
  <description>
    This package is a simple wrapper around the pocketsphinx speech recognizer, 
    using gstreamer and a Python-based interface. 
  </description>
  <author>Nikos Taras</author>
  <maintainer email="driverbulba@gmail.com">Nikos Taras</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>gstreamer0.10-pocketsphinx</exec_depend>
  <exec_depend>python-gst</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>pandora_common_msgs</depend>

  <depend>roslint</depend>

</package>
